--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Verificador de Idade</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-
-
 <body>
    <header> 
        <h1>Age Verificator</h1>
@@ -32,13 +30,12 @@
 
             <div id="res">
                 Fill the data above to get your genre and age.
-                
-
             </div>
     </section>
-    <footer>
-        
-    </footer>
+    <footer id="footer">
+        Developed by Gabriel Maes
+        <p class="copyright">&copy; 2022 Gabriel Maes All Rights Reserved</p>
+      </footer>
     <script src="./script.js"></script>
 </body>
 </html>
