--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    </header>
     <section>
             <div>
-                <p>Birth Date:
+                <p>Year of Birth:
                     <input type="number" name="txtano" id="txtano" min="0">
                 </p>
                 <p>Genre:
